Increment browserlist to 2% Fix contrast accecibility on <a/> tag Remove about from Nav (for now)

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -15,7 +15,7 @@
   --ColorMirage: #171923;
   --ColorShark: #272C32;
   --ColorMalibu: #60b3fb;
-  --ColorScienceBlue: #0178df;
+  --ColorDenim: #194AD4;
   --ColorOxfordBlue: #2D3748;
   --ColorDoveGray: #717070;
   --ColorCodGray: #121212;
@@ -25,7 +25,7 @@
   --ColorFontPrimary: var(--ColorCodGray);
   --secondary-font-color: var(--ColorOxfordBlue);
   --tertiary-font-color: var(--ColorDoveGray);
-  --href-color: var(--ColorScienceBlue);
+  --href-color: var(--ColorDenim);
   --bg-color: var(--colorAlabaster);
   --BgDark: var(--ColorSolitude);
   --BgColor2: var(--ColorSolitude);
